Fixes #312